[package]
name = "grpc-cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "*", features = ["macros", "sync", "time", "rt-multi-thread"] }
# tonic = "*"
# prost = "*"
lazy_static = "*"
rand = "*"
